--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
   "dependencies": {
     "@mikro-orm/cli": "^6.4.7",
     "@mikro-orm/core": "^6.4.7",
+    "@mikro-orm/migrations": "^6.4.7",
+    "@mikro-orm/nestjs": "^6.1.1",
     "@mikro-orm/postgresql": "^6.4.7",
+    "@mikro-orm/reflection": "^6.4.7",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "pg": "^8.13.3",
+    "qs": "^6.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -72,5 +79,13 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./mikro-orm.config.ts",
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   }
 }
