--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
@@ -17,9 +20,9 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
-    "esModuleInterop": true
-  },
-  "include": [
-    "./src/**/*.ts"
-  ]
+    "paths": {
+      "@nestjs/*": ["node_modules/@nestjs/*"],
+      "@mikro-orm/*": ["node_modules/@mikro-orm/*"]
+    }
+  }
 }
