--- a/package.json
+++ b/package.json
@@ -33,13 +33,12 @@
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "pg": "^8.13.3",
-    "qs": "^6.14.0",
+    "controller": "^1.0.0",
     "dotenv": "^16.4.7",
+    "g": "^2.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "user": "^0.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
