--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:create": "mikro-orm migration:create --config src/database/mikro-orm.config.ts",
-    "migration:up": "mikro-orm migration:up --config src/database/mikro-orm.config.ts",
-    "migration:down": "mikro-orm migration:down --config src/database/mikro-orm.config.ts"
+    "migration:create": "mikro-orm migration:create",
+    "migration:up": "mikro-orm migration:up",
+    "migration:down": "mikro-orm migration:down"
   },
   "dependencies": {
     "@mikro-orm/cli": "^6.4.7",
@@ -32,12 +32,22 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
-    "controller": "^1.0.0",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "axios": "^1.8.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "controller": "^0.6.2",
+    "core-js": "^3.37.1",
     "dotenv": "^16.4.7",
+    "firebase": "^11.4.0",
+    "firebase-admin": "^13.1.0",
     "g": "^2.0.1",
+    "path-to-regexp": "^8.2.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
+    "router": "^2.1.0",
+    "rxjs": "^7.8.2",
     "user": "^0.0.0"
   },
   "devDependencies": {
@@ -50,6 +60,7 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
@@ -70,8 +81,7 @@
   "mikro-orm": {
     "useTsNode": true,
     "configPaths": [
-      "./src/database/mikro-orm.config.ts",
-      "./dist/database/mikro-orm.config.js"
+      "./src/database/mikro-orm.config.ts"
     ]
   },
   "jest": {
@@ -90,13 +100,5 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./mikro-orm.config.ts",
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
