--- a/package.json
+++ b/package.json
@@ -23,27 +23,33 @@
     "migration:down": "mikro-orm migration:down"
   },
   "dependencies": {
+    "@hannesroth88/nestjs-firebase-auth": "^2.0.3",
     "@mikro-orm/cli": "^6.4.7",
     "@mikro-orm/core": "^6.4.7",
     "@mikro-orm/migrations": "^6.4.7",
     "@mikro-orm/nestjs": "^6.1.1",
     "@mikro-orm/postgresql": "^6.4.7",
     "@mikro-orm/reflection": "^6.4.7",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
-    "axios": "^1.8.1",
+    "axios": "^1.8.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "controller": "^1.0.0",
     "core-js": "^3.37.1",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
-    "firebase-admin": "^13.1.0",
+    "firebase-admin": "^13.2.0",
     "g": "^2.0.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "path-to-regexp": "^8.2.0",
     "reflect-metadata": "^0.2.2",
     "router": "^2.1.0",
@@ -62,6 +68,8 @@
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
