--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   },
   "dependencies": {
     "@hannesroth88/nestjs-firebase-auth": "^2.0.3",
-    "@mikro-orm/cli": "^6.4.7",
-    "@mikro-orm/core": "^6.4.7",
-    "@mikro-orm/migrations": "^6.4.7",
-    "@mikro-orm/nestjs": "^6.1.1",
-    "@mikro-orm/postgresql": "^6.4.7",
-    "@mikro-orm/reflection": "^6.4.7",
+    "@mikro-orm/cli": "6.4.7",
+    "@mikro-orm/core": "6.4.7",
+    "@mikro-orm/migrations": "6.4.7",
+    "@mikro-orm/nestjs": "6.1.1",
+    "@mikro-orm/postgresql": "6.4.7",
+    "@mikro-orm/reflection": "6.4.7",
+    "@mikro-orm/seeder": "6.4.7",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
@@ -45,7 +46,6 @@
     "controller": "^1.0.0",
     "core-js": "^3.37.1",
     "dotenv": "^16.4.7",
-    "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
     "g": "^2.0.1",
     "passport": "^0.7.0",
