Add initial Swagger config

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.1.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "axios": "^1.8.3",
     "class-transformer": "^0.5.1",
@@ -54,6 +55,7 @@
     "reflect-metadata": "^0.2.2",
     "router": "^2.1.0",
     "rxjs": "^7.8.2",
+    "swagger-ui-express": "^5.0.1",
     "user": "^0.0.0"
   },
   "devDependencies": {
